# awesome-italia-opensource

./: .activate  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  cli.py  doppler.yaml  index.html  pyproject.toml  requirements.txt  tox.ini
.github/: FUNDING.yml  PULL_REQUEST.md  boring-cyborg.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml  QUESTION.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: release.yml  test.yml
analytics/: README.md  communities.json  companies.json  digital-nomads.json  languages.json  opensource.json  partnership.json  startups.json
assets/js/: 1df93b7f.19d54823.js  1df93b7f.52391ac8.js  1df93b7f.584cdb80.js  1df93b7f.bf5b6a98.js  1df93b7f.cb3b37dc.js  main.86efefb6.js  runtime~main.0e882fc8.js  (+4 more)
data/: air-quality-monitor.json  arduino-desk-weatherstation.json  arduino.json  argon.json  bootstrap-italia.json  cachegrand.json  capsule.json  cli-copy.json  comuni-istat-api.json  covid19-Monitoring.json  daje.json  deploy-helper.json  dgc.json  espanso.json  faker.json  fastify.json  getevo.json  hitolab.json  http-bee-request.json  icaro.json  io-app.json  italiaremote.json  kamaji.json  kannon.json  kathara.json  leapp.json  make-promises-safe.json  micro-lc.json  middy.json  mobilizon-reshare.json  nuvolaris.json  orchy-mfe.json  primait-nuvola.json  prova copy 2.json  prova copy.json  pytorch-deep-learning.json  pyxis.json  redis.json  rond.json  spooq.json  (+8 more)
scheme/: communities.json  companies.json  digital-nomads.json  opensources.json  startups.json
scripts/: check.py  deps.sh  dev.sh  doppler.sh  notify.py  process.py  process_data.py  render.py  setup.sh
website/: docusaurus.config.js  package-lock.json  package.json
(+298 files in other folders)
